[gd_scene load_steps=9 format=3 uid="uid://bb67y2ujv26eu"]

[ext_resource type="Script" path="res://Scenes/UI/dialogue_ui/dialogue_ui.gd" id="1_sox3h"]
[ext_resource type="Texture2D" uid="uid://c03j2dpe8nsjs" path="res://Assets/Graphics/UI/dialogue_ui.png" id="2_ekuk8"]
[ext_resource type="FontFile" uid="uid://b8kxc2chawiw1" path="res://Assets/Fonts/mainFont.ttf" id="3_gbcyq"]

[sub_resource type="FontVariation" id="FontVariation_i8ye6"]
base_font = ExtResource("3_gbcyq")

[sub_resource type="Animation" id="Animation_xxhma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kulma"]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v70rj"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_15ad6"]
_data = {
"RESET": SubResource("Animation_xxhma"),
"fade": SubResource("Animation_kulma"),
"fade_out": SubResource("Animation_v70rj")
}

[node name="dialogue_ui" type="Control" groups=["dialogue", "dialogue_ui"]]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("1_sox3h")
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -54.77)
scale = Vector2(4.395, 3.5)
texture = ExtResource("2_ekuk8")

[node name="TextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -269.0
offset_top = -96.0
offset_right = 288.0
offset_bottom = -8.0
theme_override_fonts/normal_font = SubResource("FontVariation_i8ye6")
theme_override_font_sizes/normal_font_size = 25
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="typingTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="queuefree_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_15ad6")
}
autoplay = "fade"

[connection signal="timeout" from="typingTimer" to="." method="_on_typing_timer_timeout"]
[connection signal="timeout" from="queuefree_timer" to="." method="_on_queuefree_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
